kajit/tests/snapshots/generated_synthetic__generated_ra_mir_json_tuple_pair_aarch64.snap
---
source: kajit/tests/generated_synthetic.rs
expression: ra_text
---
ra_func @0 {
  block b0:
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    call_intrinsic(0x<ptr>, fo=8) !gpr,simd
    term: return
    succs: (none)
}
