kajit/tests/snapshots/generated_synthetic__generated_ra_mir_json_vec_scalar_small_aarch64.snap
---
source: kajit/tests/generated_synthetic.rs
expression: ra_text
---
ra_func @0 {
  block b0:
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    v0:gpr = const(0x0)
    v2:gpr = const(0x7d)
    v35:gpr = const(0x1)
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    v1:gpr = peek_byte
    v3:gpr = CmpNe v1:gpr, v2:gpr
    term: branch_if_zero v3 -> b2, fallthrough b1
    succs: b2 [v0, v35] b1 [v0, v35]
  block b1 [params: v0, v35] (preds: b0):
    term: branch b3
    succs: b3 [v0, v35]
  block b2 [params: v0, v35] (preds: b0):
    advance(1)
    v34:gpr = copy v0:gpr
    term: branch b32
    succs: b32 [v0, v35]
  block b3 [params: v0, v35] (preds: b1):
    v8:gpr = const(0x0)
    v9:gpr = const(0x<ptr>)
    v10:gpr = const(0x6)
    v12:gpr = const(0x1)
    v22:gpr = const(0x2c)
    v13:gpr = CmpNe v8:gpr, v12:gpr
    v71:gpr = copy v0:gpr
    term: branch b4
    succs: b4 [v8, v9, v10, v13, v22, v35, v71]
  block b4 [params: v8, v9, v10, v13, v22, v35, v71] (preds: b3, b30):
    v4:gpr = slot_addr(0)
    v5:gpr = slot_addr(1)
    call_intrinsic(0x<ptr>, fo=0) v4:gpr, v5:gpr !gpr,simd
    v6:gpr = read_slot(0)
    v7:gpr = read_slot(1)
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    v11:gpr = call_pure(0x<ptr>) v6:gpr, v7:gpr, v9:gpr, v10:gpr !gpr,simd
    v14:gpr = And v11:gpr, v13:gpr
    term: branch_if_zero v14 -> b6, fallthrough b5
    succs: b6 [v8, v9, v10, v13, v22, v35, v71] b5 [v8, v9, v10, v13, v22, v35, v71]
  block b5 [params: v8, v9, v10, v13, v22, v35, v71] (preds: b4):
    term: branch b7
    succs: b7 [v8, v9, v10, v13, v22, v35, v71]
  block b6 [params: v8, v9, v10, v13, v22, v35, v71] (preds: b4):
    v18:gpr = copy v71:gpr
    v19:gpr = copy v8:gpr
    term: branch b18
    succs: b18 [v8, v9, v10, v13, v18, v19, v22, v35]
  block b7 [params: v8, v9, v10, v13, v22, v35, v71] (preds: b5):
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    v38:gpr = slot_addr(2)
    v40:gpr = const(0x5d)
    v15:gpr = const(0x1)
    v17:gpr = const(0x1)
    call_intrinsic(0x<ptr>, fo=0) v38:gpr !gpr,simd
    v16:gpr = Or v71:gpr, v15:gpr
    v39:gpr = read_slot(2)
    v41:gpr = CmpNe v39:gpr, v40:gpr
    term: branch_if_zero v41 -> b9, fallthrough b8
    succs: b9 [v8, v9, v10, v13, v16, v17, v22, v35] b8 [v8, v9, v10, v13, v16, v17, v22, v35]
  block b8 [params: v8, v9, v10, v13, v16, v17, v22, v35] (preds: b7):
    term: branch b10
    succs: b10 [v8, v9, v10, v13, v16, v17, v22, v35]
  block b9 [params: v8, v9, v10, v13, v16, v17, v22, v35] (preds: b7):
    advance(1)
    v42:gpr = const(0x4)
    v43:gpr = const(0x0)
    store([8:W8]) v42:gpr
    store([16:W8]) v43:gpr
    store([0:W8]) v43:gpr
    term: branch b17
    succs: b17 [v8, v9, v10, v13, v16, v17, v22, v35]
  block b10 [params: v8, v9, v10, v13, v16, v17, v22, v35] (preds: b8):
    v44:gpr = const(0x4)
    v45:gpr = const(0x4)
    v46:gpr = const(0x4)
    v48:gpr = const(0x0)
    v58:gpr = const(0x1)
    v60:gpr = const(0x4)
    v47:gpr = call_intrinsic(0x<ptr>, fo=0) v44:gpr, v45:gpr, v46:gpr !gpr,simd
    v49:gpr = save_out_ptr
    set_out_ptr v47:gpr
    v92:gpr = copy v47:gpr
    v93:gpr = copy v47:gpr
    v94:gpr = copy v48:gpr
    v95:gpr = copy v44:gpr
    term: branch b11
    succs: b11 [v8, v9, v10, v13, v16, v17, v22, v35, v49, v58, v60, v92, v93, v94, v95]
  block b11 [params: v8, v9, v10, v13, v16, v17, v22, v35, v49, v58, v60, v92, v93, v94, v95] (preds: b10, b15):
    v50:gpr = CmpNe v94:gpr, v95:gpr
    v59:gpr = Add v94:gpr, v58:gpr
    v61:gpr = Add v93:gpr, v60:gpr
    v62:gpr = slot_addr(2)
    term: branch_if_zero v50 -> b13, fallthrough b12
    succs: b13 [v8, v9, v10, v13, v16, v17, v22, v35, v49, v58, v59, v60, v61, v62, v92, v93, v94, v95] b12 [v8, v9, v10, v13, v16, v17, v22, v35, v49, v58, v59, v60, v61, v62, v92, v93, v95]
  block b12 [params: v8, v9, v10, v13, v16, v17, v22, v35, v49, v58, v59, v60, v61, v62, v92, v93, v95] (preds: b11):
    term: branch b14
    succs: b14 [v8, v9, v10, v13, v16, v17, v22, v35, v49, v58, v59, v60, v61, v62, v92, v93, v95]
  block b13 [params: v8, v9, v10, v13, v16, v17, v22, v35, v49, v58, v59, v60, v61, v62, v92, v93, v94, v95] (preds: b11):
    v51:gpr = const(0x1)
    v53:gpr = const(0x4)
    v54:gpr = const(0x4)
    v52:gpr = Shl v95:gpr, v51:gpr
    v55:gpr = call_intrinsic(0x<ptr>, fo=0) v92:gpr, v94:gpr, v95:gpr, v52:gpr, v53:gpr, v54:gpr !gpr,simd
    v56:gpr = copy v55:gpr
    v57:gpr = copy v52:gpr
    term: branch b15
    succs: b15 [v8, v9, v10, v13, v16, v17, v22, v35, v49, v56, v52, v58, v59, v60, v61, v62, v93]
  block b14 [params: v8, v9, v10, v13, v16, v17, v22, v35, v49, v58, v59, v60, v61, v62, v92, v93, v95] (preds: b12):
    v56:gpr = copy v92:gpr
    v57:gpr = copy v95:gpr
    term: branch b15
    succs: b15 [v8, v9, v10, v13, v16, v17, v22, v35, v49, v56, v57, v58, v59, v60, v61, v62, v93]
  block b15 [params: v8, v9, v10, v13, v16, v17, v22, v35, v49, v56, v57, v58, v59, v60, v61, v62, v93] (preds: b13, b14):
    set_out_ptr v93:gpr
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    call_intrinsic(0x<ptr>, fo=0) v62:gpr !gpr,simd
    v63:gpr = read_slot(2)
    v64:gpr = CmpNe v63:gpr, v58:gpr
    v92:gpr = copy v56:gpr
    v93:gpr = copy v61:gpr
    v94:gpr = copy v59:gpr
    v95:gpr = copy v57:gpr
    term: branch_if v64 -> b11, fallthrough b16
    succs: b11 [v8, v9, v10, v13, v16, v17, v22, v35, v49, v58, v60, v92, v93, v94, v95] b16 [v8, v9, v10, v13, v16, v17, v22, v35, v49, v92, v94, v95]
  block b16 [params: v8, v9, v10, v13, v16, v17, v22, v35, v49, v92, v94, v95] (preds: b15):
    set_out_ptr v49:gpr
    store([8:W8]) v92:gpr
    store([16:W8]) v94:gpr
    store([0:W8]) v95:gpr
    term: branch b17
    succs: b17 [v8, v9, v10, v13, v16, v17, v22, v35]
  block b17 [params: v8, v9, v10, v13, v16, v17, v22, v35] (preds: b9, b16):
    v18:gpr = copy v16:gpr
    v19:gpr = copy v17:gpr
    term: branch b18
    succs: b18 [v8, v9, v10, v13, v18, v19, v22, v35]
  block b18 [params: v8, v9, v10, v13, v18, v19, v22, v35] (preds: b6, b17):
    term: branch_if_zero v19 -> b20, fallthrough b19
    succs: b20 [v8, v9, v10, v13, v18, v22, v35] b19 [v8, v9, v10, v13, v18, v22, v35]
  block b19 [params: v8, v9, v10, v13, v18, v22, v35] (preds: b18):
    term: branch b21
    succs: b21 [v8, v9, v10, v13, v18, v22, v35]
  block b20 [params: v8, v9, v10, v13, v18, v22, v35] (preds: b18):
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    v20:gpr = copy v18:gpr
    term: branch b22
    succs: b22 [v8, v9, v10, v13, v18, v22, v35]
  block b21 [params: v8, v9, v10, v13, v18, v22, v35] (preds: b19):
    v20:gpr = copy v18:gpr
    term: branch b22
    succs: b22 [v8, v9, v10, v13, v20, v22, v35]
  block b22 [params: v8, v9, v10, v13, v20, v22, v35] (preds: b20, b21):
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    bounds_check(1)
    v21:gpr = read_bytes(1)
    v23:gpr = CmpNe v21:gpr, v22:gpr
    term: branch_if_zero v23 -> b24, fallthrough b23
    succs: b24 [v8, v9, v10, v13, v20, v22, v35] b23 [v8, v9, v10, v13, v20, v21, v22, v35]
  block b23 [params: v8, v9, v10, v13, v20, v21, v22, v35] (preds: b22):
    term: branch b25
    succs: b25 [v8, v9, v10, v13, v20, v21, v22, v35]
  block b24 [params: v8, v9, v10, v13, v20, v22, v35] (preds: b22):
    v24:gpr = const(0x1)
    v31:gpr = copy v24:gpr
    v32:gpr = copy v20:gpr
    term: branch b30
    succs: b30 [v8, v9, v10, v13, v22, v31, v20, v35]
  block b25 [params: v8, v9, v10, v13, v20, v21, v22, v35] (preds: b23):
    v80:gpr = copy v20:gpr
    v25:gpr = const(0x7d)
    v26:gpr = CmpNe v21:gpr, v25:gpr
    term: branch_if_zero v26 -> b27, fallthrough b26
    succs: b27 [v8, v9, v10, v13, v22, v35, v80] b26 [v8, v9, v10, v13, v22, v35, v80]
  block b26 [params: v8, v9, v10, v13, v22, v35, v80] (preds: b25):
    term: branch b28
    succs: b28 [v8, v9, v10, v13, v22, v35, v80]
  block b27 [params: v8, v9, v10, v13, v22, v35, v80] (preds: b25):
    v27:gpr = const(0x0)
    v29:gpr = copy v27:gpr
    v30:gpr = copy v80:gpr
    term: branch b29
    succs: b29 [v8, v9, v10, v13, v22, v29, v80, v35]
  block b28 [params: v8, v9, v10, v13, v22, v35, v80] (preds: b26):
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    v28:gpr = const(0x0)
    v29:gpr = copy v28:gpr
    v30:gpr = copy v80:gpr
    term: branch b29
    succs: b29 [v8, v9, v10, v13, v22, v29, v30, v35]
  block b29 [params: v8, v9, v10, v13, v22, v29, v30, v35] (preds: b27, b28):
    v31:gpr = copy v29:gpr
    v32:gpr = copy v30:gpr
    term: branch b30
    succs: b30 [v8, v9, v10, v13, v22, v31, v32, v35]
  block b30 [params: v8, v9, v10, v13, v22, v31, v32, v35] (preds: b24, b29):
    v71:gpr = copy v32:gpr
    term: branch_if v31 -> b4, fallthrough b31
    succs: b4 [v8, v9, v10, v13, v22, v35, v71] b31 [v35, v71]
  block b31 [params: v35, v71] (preds: b30):
    v34:gpr = copy v71:gpr
    term: branch b32
    succs: b32 [v34, v35]
  block b32 [params: v34, v35] (preds: b2, b31):
    v36:gpr = And v34:gpr, v35:gpr
    v37:gpr = CmpNe v36:gpr, v35:gpr
    term: branch_if_zero v37 -> b34, fallthrough b33
    succs: b34 b33
  block b33 (preds: b32):
    term: branch b35
    succs: b35
  block b34 (preds: b32):
    term: branch b36
    succs: b36
  block b35 (preds: b33):
    term: error_exit(MissingRequiredField)
    succs: (none)
  block b36 (preds: b34):
    term: return
    succs: (none)
}
ra_func @1 {
  block b0:
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    v38:gpr = slot_addr(2)
    v40:gpr = const(0x5d)
    call_intrinsic(0x<ptr>, fo=0) v38:gpr !gpr,simd
    v39:gpr = read_slot(2)
    v41:gpr = CmpNe v39:gpr, v40:gpr
    term: branch_if_zero v41 -> b2, fallthrough b1
    succs: b2 b1
  block b1 (preds: b0):
    term: branch b3
    succs: b3
  block b2 (preds: b0):
    advance(1)
    v42:gpr = const(0x4)
    v43:gpr = const(0x0)
    store([8:W8]) v42:gpr
    store([16:W8]) v43:gpr
    store([0:W8]) v43:gpr
    term: branch b10
    succs: b10
  block b3 (preds: b1):
    v44:gpr = const(0x4)
    v45:gpr = const(0x4)
    v46:gpr = const(0x4)
    v48:gpr = const(0x0)
    v58:gpr = const(0x1)
    v60:gpr = const(0x4)
    v47:gpr = call_intrinsic(0x<ptr>, fo=0) v44:gpr, v45:gpr, v46:gpr !gpr,simd
    v49:gpr = save_out_ptr
    set_out_ptr v47:gpr
    v84:gpr = copy v47:gpr
    v85:gpr = copy v47:gpr
    v86:gpr = copy v48:gpr
    v87:gpr = copy v44:gpr
    term: branch b4
    succs: b4 [v49, v58, v60, v84, v85, v86, v87]
  block b4 [params: v49, v58, v60, v84, v85, v86, v87] (preds: b3, b8):
    v50:gpr = CmpNe v86:gpr, v87:gpr
    v59:gpr = Add v86:gpr, v58:gpr
    v61:gpr = Add v85:gpr, v60:gpr
    v62:gpr = slot_addr(2)
    term: branch_if_zero v50 -> b6, fallthrough b5
    succs: b6 [v49, v58, v59, v60, v61, v62, v84, v85, v86, v87] b5 [v49, v58, v59, v60, v61, v62, v84, v85, v87]
  block b5 [params: v49, v58, v59, v60, v61, v62, v84, v85, v87] (preds: b4):
    term: branch b7
    succs: b7 [v49, v58, v59, v60, v61, v62, v84, v85, v87]
  block b6 [params: v49, v58, v59, v60, v61, v62, v84, v85, v86, v87] (preds: b4):
    v51:gpr = const(0x1)
    v53:gpr = const(0x4)
    v54:gpr = const(0x4)
    v52:gpr = Shl v87:gpr, v51:gpr
    v55:gpr = call_intrinsic(0x<ptr>, fo=0) v84:gpr, v86:gpr, v87:gpr, v52:gpr, v53:gpr, v54:gpr !gpr,simd
    v56:gpr = copy v55:gpr
    v57:gpr = copy v52:gpr
    term: branch b8
    succs: b8 [v49, v56, v52, v58, v59, v60, v61, v62, v85]
  block b7 [params: v49, v58, v59, v60, v61, v62, v84, v85, v87] (preds: b5):
    v56:gpr = copy v84:gpr
    v57:gpr = copy v87:gpr
    term: branch b8
    succs: b8 [v49, v56, v57, v58, v59, v60, v61, v62, v85]
  block b8 [params: v49, v56, v57, v58, v59, v60, v61, v62, v85] (preds: b6, b7):
    set_out_ptr v85:gpr
    call_intrinsic(0x<ptr>, fo=0) !gpr,simd
    call_intrinsic(0x<ptr>, fo=0) v62:gpr !gpr,simd
    v63:gpr = read_slot(2)
    v64:gpr = CmpNe v63:gpr, v58:gpr
    v84:gpr = copy v56:gpr
    v85:gpr = copy v61:gpr
    v86:gpr = copy v59:gpr
    v87:gpr = copy v57:gpr
    term: branch_if v64 -> b4, fallthrough b9
    succs: b4 [v49, v58, v60, v84, v85, v86, v87] b9 [v49, v84, v86, v87]
  block b9 [params: v49, v84, v86, v87] (preds: b8):
    set_out_ptr v49:gpr
    store([8:W8]) v84:gpr
    store([16:W8]) v86:gpr
    store([0:W8]) v87:gpr
    term: branch b10
    succs: b10
  block b10 (preds: b2, b9):
    term: return
    succs: (none)
}
